# Autoplay

./: .gitignore  README.md
Gridentify/: grid_game.py  seeded_bot.py  seeded_grid_game.py
Gridentify/python/: seeded_bot.py
Gridentify/rust/: __init__.py  gridentify.pyd~  gridentify.pyi
Gridentify/rust/gridentify/: Cargo.toml
Landing_Rockets/: landing.py
Mancala/: Game.py  README.md  hfmancala.py  main.py  mancala.py  neuralnetwork.py  poparchives.py
Mancala/evolution/: main.py
Mancala/evolution/population archives/: gen176.pkl
Mancala/population archives/: gen0.pkl  gen1.pkl  gen10.pkl  gen11.pkl  gen12.pkl  gen129.pkl  gen13.pkl  gen14.pkl  gen15.pkl  gen16.pkl  gen17.pkl  gen18.pkl  gen19.pkl  gen2.pkl  gen20.pkl  gen21.pkl  gen22.pkl  gen23.pkl  gen24.pkl  gen25.pkl  gen3.pkl  gen4.pkl  gen43.pkl  gen5.pkl  gen6.pkl  gen7.pkl  gen8.pkl  gen9.pkl
Mancala/tree_search/: README.md  new_mancala.py  test.py
gridentify/: Cargo.toml
gridentify/src/: game.rs  main.rs  moves.rs  tree_search.rs
mancala/: Cargo.toml
mancala/src/: agent.rs  game.rs  main.rs  network.rs  tree_search.rs
mancala_python/: README.md
mancala_python/population archives/: gen175.pkl
merge/: Cargo.toml
merge/src/: board.rs  bot.rs  connection.rs  game.rs  main.rs  messages.rs
onitama/: Cargo.toml
onitama/src/: bot.rs  cards.rs  cli.rs  color.rs  colour.rs  connection.rs  error.rs  game.rs  gui.rs  macros.rs  main.rs  messages.rs  perft.rs
struggle/: Cargo.toml
struggle/src/: action.rs  bot.rs  card.rs  game.rs  main.rs  manager.rs  messages.rs  test.json
(+1 files in other folders)
