[package]
name = "mancala"
version = "0.1.0"
authors = ["Viliam Vadocz <viliam.vadocz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1.0.2"
rulinalg = "0.4.2"
rand = "0.7.3"
rand_distr = "0.2.2"
