[package]
name = "onitama"
version = "0.1.0"
authors = ["Viliam Vadocz <viliam.vadocz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "2.1.0"
typenum = "1.12.0"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
websocket = "0.26.2"
smallvec = "1.4.2"
